<resources>
    <string name="app_name">Music player</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="music_library">Music Library</string>
    <string name="favourites">Favourites</string>
    <string name="albums_text">Here could we find albums in order A-Z,all the albums what app could find on our device.</string>
    <string name="m_player">Here would be the player and would be there a global (toolbar)player</string>
    <string name="favourites_text"><![CDATA[Listed the song(s) <-- marked as favourite(s), or the most played]]></string>
    <string name="artists_text">Artist(s) would be listed here in A-Z or most played</string>
    <string name="playlists_text">Here could you make new playlist(s) or find it.</string>
    <string name="playlists_m">to modify the playlists it is needed to read the tracks and ratings from a file. A JSON file and its handling methods (JSONObject, getJSONArray, getJSONObject, getString, getInt) would handle this in the onProgressChanged() method, using the progress variable as a filter.</string>
    <string name="musicplayer_d">For musicplayer SetDataSource(path_to_song);|mp.start()|;mp.pause();|mp.reset();|mp.getDuration();|mp.getCurrentDuration();|mp.seekTo(position);|mp.isPlaying();</string>
</resources>
