<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Grey">

            <TextView
                android:id="@+id/playlists"
                style="@style/barText1"
                android:text="@string/playlists"
                />

            <TextView
                android:id="@+id/artists"
                style="@style/barText1"
                android:layout_toRightOf="@id/playlists"
                android:text="@string/artists"
                 />
            <TextView
                android:id="@+id/musicLibrary"
                style="@style/barText1"
                android:layout_toRightOf="@id/artists"
                android:text="@string/music_library"
                />
            <TextView
                android:id="@+id/favourites"
                style="@style/barText1"
                android:layout_toRightOf="@id/musicLibrary"
                android:text="@string/favourites"
                 />

        </RelativeLayout>

        <TextView
        android:id="@+id/textView"
        android:text="@string/albums_text"
        style="@style/textViews"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/albums" />

</LinearLayout>
